RESOLVED FIXED28829
Crash in AccessibilityRenderObject::activeDescendant when trying to set aria-activedescendant to something without a renderer
https://bugs.webkit.org/show_bug.cgi?id=28829
Summary Crash in AccessibilityRenderObject::activeDescendant when trying to set aria-...
Adele Peterson
Reported 2009-08-29 16:19:32 PDT
Created attachment 38777 [details] crashing test case Crash in AccessibilityRenderObject::activeDescendant when trying to set aria-activedescendant to something without a renderer I could only get this crash to happen when using VoiceOver. See the attached test case. Just a simple nil check - I'll attach a patch soon. Is there a way to trigger the accessibility API through DRT?
Attachments
crashing test case (228 bytes, text/html)
2009-08-29 16:19 PDT, Adele Peterson
no flags
patch (3.83 KB, patch)
2009-08-29 16:53 PDT, Adele Peterson
mitz: review+
Adele Peterson
Comment 1 2009-08-29 16:41:11 PDT
to answer my own question, yes :)
Adele Peterson
Comment 2 2009-08-29 16:53:54 PDT
Adele Peterson
Comment 3 2009-08-29 17:00:14 PDT
Committed revision 47883.
Adele Peterson
Comment 4 2009-08-29 17:12:49 PDT
Note You need to log in before you can comment on or make changes to this bug.