WebCore: Fix for https://bugs.webkit.org/show_bug.cgi?id=28829 Crash in AccessibilityRenderObject::activeDescendant when trying to set aria-activedescendant to something without a renderer

Reviewed by Dan Bernstein.

Test: accessibility/aria-activedescendant-crash.html

* accessibility/AccessibilityRenderObject.cpp: (WebCore::AccessibilityRenderObject::activeDescendant): Nil check.

LayoutTests: Test for https://bugs.webkit.org/show_bug.cgi?id=28829
Crash in AccessibilityRenderObject::activeDescendant when trying to set aria-activedescendant to something without a renderer

Reviewed by Dan Bernstein.

* accessibility/aria-activedescendant-crash-expected.txt: Added.
* accessibility/aria-activedescendant-crash.html: Added.



Canonical link: https://commits.webkit.org/39459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47883 268f45cc-cd09-0410-ab3c-d52691b4dbfc